--- a/fastlane/metadata/ru/release_notes.txt
+++ b/fastlane/metadata/ru/release_notes.txt
@@ -1,9 +1,8 @@
-Вы используете блок встраивания? Для медиафайлов, которые вы встраиваете на свой сайт, теперь вы увидите параметр «Изменить размер для небольших устройств». Включите, чтобы изменить размер содержимого в соответствии с размером экрана; выключите, чтобы отключить это.
+- Будьте в курсе! Теперь вы можете получать еженедельную сводку активности на ваших популярных сайтах.
 
-Вам нравится инструмент напоминаний о блогах? Мы добавили новую функцию, которая позволяет вам выбрать определенное время для получения уведомления.
+- У вас есть еще больший контроль над комментариями на вашем сайте - при их редактировании теперь вы также можете изменить имя автора, адрес электронной почты и адрес сайта комментатора.
+Мы внесли несколько удобных изменений в редактор блоков. Блок встраивания теперь имеет предварительный просмотр, когда вы добавляете что-то с YouTube или Twitter (появятся и другие поставщики). Кроме того, когда вы пытаетесь вставить блок и для него нет результатов, то вы увидите экран отсутствия результата.
 
-Нужно закрыть свою учётную запись? (Мы надеемся, что вы никогда не покинете нас!) Но при необходимости теперь у вас есть возможность сделать это в настройках своей учётной записи.
+- Если вы перейдете в «Настройки записи»> «Формат записи», вы найдете вариант «Стандартный» вверху, а остальные варианты теперь аккуратно отсортированы по алфавиту ниже. (Варианты зависят от используемой темы!)
 
-Добавление геотегов к записям больше не поддерживается в сети, поэтому мы удалили параметр "Местоположение" в настройках публикации.
-
-Мы также внесли другие улучшения, в том числе исправление проблемы обрезки в Чтиве, а также возможность рекомендовать приложение своим друзьям на экранах «Я» и «О себе».
+- И еще: обновить ваш сайт теперь очень просто - просто потяните, чтобы обновить с экрана «Мой сайт»!
