Add release note.

--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -3,6 +3,7 @@
 * [*] Fixed a bug on Reader that prevented Saved posts to be removed
 * [*] Share Extension: Allow creation of Pages in addition to Posts. [#16084]
 * [*] Updated the wording for the "Posts" and "Pages" entries in My Site screen [https://github.com/wordpress-mobile/WordPress-iOS/pull/17156]
+* [*] Fixed an issue that caused `Follow conversation by email` to not appear on some post's comments. [#17159]
 
 18.2
 -----
